add sidebar navigation

--- a/polynomial-regression-for-powerbi.html
+++ b/polynomial-regression-for-powerbi.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+	<!--TODO: customize color of selected page-->
+	<!--Side Navigation-->
+	<div class="sidenav">
+		<p id="sidenavHeader">NOAH <br /> SEVERYN</p>
+		<a href="index.html">Home</a>
+		<a href="polynomial-regression-for-powerbi.html">Polynomial Regression for Power BI</a>
+	</div>
+
+
+	<!--Main Body-->
 	<h1>2ND ORDER POLYNOMIAL REGRESSION IN POWER BI</h1>
 
 
@@ -24,8 +34,8 @@
 		<li>You want to use any other kind of regression other than linear (higher order, exponential, logarithmic, etc.)</li>
 	</ul>
 	<p>If you would like to follow along, I have attached the Excel and Power BI files I used to work through this the first time. Feel free to reference those</p>
-	<p><img src="https://i.pinimg.com/originals/f0/ba/ab/f0baabc7a94a50448da9fb2d9508d450.png" class="linkicon" alt="Microsoft Excel icon" /> <a href="resource/polynomial-regression-for-powerbi/regression_test.xlsx" download>regression_test.xlsx</a></p>
-	<p><img src="https://lirp-cdn.multiscreensite.com/5b258fc8/dms3rep/multi/opt/Powerbi-960w.png" class="linkicon" alt="Power BI icon" /> <a href="resource/polynomial-regression-for-powerbi/regression_test.pbix" download>regression_test.pbix</a></p>
+	<p><img src="https://i.pinimg.com/originals/f0/ba/ab/f0baabc7a94a50448da9fb2d9508d450.png" class="linkicon" alt="Microsoft Excel icon" /> <a href="resource/polynomial-regression-for-powerbi/regression_test.xlsx" download>regression_test.xlsx</a> (55kb)</p>
+	<p><img src="https://lirp-cdn.multiscreensite.com/5b258fc8/dms3rep/multi/opt/Powerbi-960w.png" class="linkicon" alt="Power BI icon" /> <a href="resource/polynomial-regression-for-powerbi/regression_test.pbix" download>regression_test.pbix</a> (51kb)</p>
 
 	<h2>Building straight curves</h2>
 	<p>After some quick research, I found an example courtesy of <i>XXL BI</i> that works quite nicely for <a href="https://xxlbi.com/blog/simple-linear-regression-in-dax/">calculating a simple linear regression</a>. Conveniently, this will also provide us with a template to start from when building  up our higher order regression. From that link, we find two additional reasons to consider using a calculated trend line instead of the automatic ones provided by the visual:</p>
