added parallax header image

--- a/polynomial-regression-for-powerbi.html
+++ b/polynomial-regression-for-powerbi.html
@@ -20,7 +20,11 @@
 
 
 	<!--Main Body-->
-	<h1>2ND ORDER POLYNOMIAL REGRESSION IN POWER BI</h1>
+	<div class="parallax"></div>
+	<div class="text">
+		<h1>2ND ORDER POLYNOMIAL REGRESSION IN POWER BI</h1>
+	</div>
+	
 
 
 	<h2>Let's make some curves</h2>
