updated index page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" href="index.css">
+
+	<title>Noah Severyn | About Me</title>
+</head>
 <body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
-	<a href="polynomial-regression-for-powerbi.html">2nd Order Polynomial Regression In Power BI</a>
+	<!--Side Navigation-->
+	<div class="sidenav">
+		<p id="sidenavHeader">NOAH <br /> SEVERYN</p>
+		<a href="index.html">Home</a>
+		<a href="polynomial-regression-for-powerbi.html">Polynomial Regression for Power BI</a>
+	</div>
+
+	<div id="header_bg">
+		<div id="header_title">
+			<h1>- Welcome -</h1>
+		</div>
+		<div id="header_social">
+			<!--https://www.freepik.com-->
+			<a href="https://www.linkedin.com/in/noah-severyn-660055110/" target="_blank">
+				<img src="https://cdn-icons-png.flaticon.com/512/169/169092.png" class="socialicon" alt="Linkedin logo" />
+			</a>
+
+		</div>
+	</div>
+	
+	<p>Hi. I am a work in progress.</p>
 </body>
 </html>
