added github icon link

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-us">
 <head>
 	<meta charset="UTF-8">
@@ -18,14 +18,16 @@
 
 	<div id="header_bg">
 		<div id="header_title">
-			<h1>- Welcome -</h1>
+			<h1>·  Welcome  ·</h1>
 		</div>
 		<div id="header_social">
 			<!--https://www.freepik.com-->
 			<a href="https://www.linkedin.com/in/noah-severyn-660055110/" target="_blank">
-				<img src="https://cdn-icons-png.flaticon.com/512/169/169092.png" class="socialicon" alt="Linkedin logo" />
+				<img src="https://cdn-icons-png.flaticon.com/512/169/169092.png" class="socialicon" alt="Linkedin logo linked to my Linkedin profile" />
 			</a>
-
+			<a href="https://github.com/noah-severyn" target="_blank">
+				<img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" class="socialicon" alt="Github logo linked to my github site" />
+			</a>
 		</div>
 	</div>
 	
