--- a/polynomial-regression-for-powerbi.html
+++ b/polynomial-regression-for-powerbi.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="polynomial.css">
+	<link rel="stylesheet" href="resource/polynomial/polynomial.css">
 
 	<title>2nd Order Polynomial Regression in Power BI</title>
 </head>
