created new page

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<link rel="stylesheet" href="index.css">
-
 	<title>Noah Severyn | About Me</title>
+	<link rel="stylesheet" href="/resource/index/index.css">
+	<link rel="stylesheet" href="/resource/shared/sidenav.css">
+	
 </head>
 <body>
 	<!--Side Navigation-->
 	<div class="sidenav">
 		<p id="sidenavHeader">NOAH <br /> SEVERYN</p>
 		<a href="index.html">Home</a>
+		<a href="simcity4.html">Simcity 4 Modding: My Story</a>
 		<a href="polynomial-regression-for-powerbi.html">Polynomial Regression for Power BI</a>
 	</div>
 
