--- a/polynomial-regression-for-powerbi.html
+++ b/polynomial-regression-for-powerbi.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="resource/polynomial/polynomial.css">
-
+	<link rel="stylesheet" href="resource/shared/sidenav.css">
 	<title>2nd Order Polynomial Regression in Power BI</title>
 </head>
 
@@ -15,7 +15,8 @@
 	<div class="sidenav">
 		<p id="sidenavHeader">NOAH <br /> SEVERYN</p>
 		<a href="index.html">Home</a>
-		<a href="polynomial.html">Polynomial Regression for Power BI</a>
+		<a href="simcity4.html">Simcity 4 Modding: My Story</a>
+		<a href="polynomial-regression-for-powerbi.html">Polynomial Regression for Power BI</a>
 	</div>
 
 
