added main stylesheet

--- a/polynomial-regression-for-powerbi.html
+++ b/polynomial-regression-for-powerbi.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="resource/polynomial/polynomial.css">
+	<link rel="stylesheet" href="resource/shared/main.css">
 	<link rel="stylesheet" href="resource/shared/sidenav.css">
+	<link rel="stylesheet" href="resource/polynomial/polynomial.css">
 	<title>2nd Order Polynomial Regression in Power BI</title>
 </head>
 
@@ -15,7 +16,7 @@
 	<div class="sidenav">
 		<p id="sidenavHeader">NOAH <br /> SEVERYN</p>
 		<a href="index.html">Home</a>
-		<a href="simcity4.html">Simcity 4 Modding: My Story</a>
+		<a href="simcity4.html">Simcity 4 Modding: A Passion</a>
 		<a href="polynomial-regression-for-powerbi.html">Polynomial Regression for Power BI</a>
 	</div>
 
