adjust inner detail format

--- a/simcity4.html
+++ b/simcity4.html
@@ -202,7 +202,7 @@
         <p>Hosted online <a href="https://community.simtropolis.com/sc4-prop-and-texture-catalog/index/">here</a> and downloaded <a href="https://community.simtropolis.com/files/file/34032-simcity-4-prop-texture-catalog/">here</a>, the Simcity 4 Prop + Texture Catalog is a much expanded version of the <a href="https://www.sc4devotion.com/forums/index.php?topic=13364.0">original catalog</a> posted at SC4Devotion. I wanted to create a resource for lot creators that is a) much expanded - a lot of new content has been released or changed since the first version in 2011, and b) make it much easier to use.</p>
         <p>The intent of this tool is to provide and invaluable resource for content creators (and especially lotters) who are looking for more and better content to incorporate into their work. Looking for a motorcycle to add to your lot? Then filter only prop packs that contain vehicles and/or motorcycles. Looking for seasonal trees? Look through all packs that contain seasonal trees until you can find the right ones for you. Want to use all High Definition rendered props? Scour all packs that contain HD props to find the ones you want.</p>
 
-        <details id="CatalogDetailEarly">
+        <details id="CatalogDetailEarly" class="DetailsInner">
             <summary>Early versions (2.x.x)</summary>
             <p>The early versions of this catalog (versions 2.x.x) were HTML and image based, with JavaScript to allow for dynamic filtering and sorting of prop and texture packs. The source code can be found in the <a href="https://github.com/noah-severyn/SC4PropTextureCatalog">GitHub repository.</a></p>
             <p>The catalog provided the option to search for prop or texture packs by category,</p>
@@ -211,7 +211,7 @@
             <img src="https://raw.githubusercontent.com/noah-severyn/SC4PropTextureCatalog/main/resources/2.gif" class="centeredimg" alt="Searching for a prop by TGI or Exemplar Name or Author">
         </details>
     
-        <details id="CatalogDetailLater">
+        <details id="CatalogDetailLater" class="DetailsInner">
             <summary>Later versions (3.x.x)</summary>
             <p>As the size of the database grew with almost 50,000 items in an HTML table, performance obviously began to degrade so I begun work on a newer version no HTML/JavaScript based that would be easily able to handle a database of that size. This is currently in progress. See also other Development Projects for related updates.</p>
         </details>
