--- a/polynomial-regression-for-powerbi.html
+++ b/polynomial-regression-for-powerbi.html
@@ -23,14 +23,11 @@
 
 	<!--Main Body-->
 	<div class="parallax"></div>
-	<div class="text">
-		<h1>2ND ORDER POLYNOMIAL REGRESSION IN POWER BI</h1>
-	</div>
+	<h1>2ND ORDER POLYNOMIAL REGRESSION IN POWER BI</h1>
 	
 
-
 	<h2>Let's make some curves</h2>
-	<p>Last Update: Feb 2022 (new format in progress Aug 2022)</p>
+	<p><var>Last Update: Aug 2022</var></p>
 	<img src="resource/polynomial/charts.png" alt="Original charts" />
 	<p>If you're here looking to build some polynomial regression curves for some data, I'm sure I do not need to explain why they can be helpful when analyzing your data. I found myself in a situation like this recently, where I needed to replicate some excel charts in a Power BI (PBI) report. Pretty easy to do since I already most of the data set up, however this chart had both a linear regression line and a 2nd order polynomial regression line. As demonstarted in the example to the right, each of these regression lines told different stories about what was happening about the data in question.</p>
 	<p>As anyone developing PBI reports for a company will surely know, building the reports is a rather useless task if people don't use them - and even more so if the exact same analysis is being performed in Excel. This screenshot (a screenshot of a PowerPoint presentation from a Teams meeting), is one such example. The report I created to show this data did not have the any kind of useful trend lines  on this chart, so Excel (naturally) came to the rescue.</p>
