--- a/index.html
+++ b/index.html
@@ -3,36 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Noah Severyn | About Me</title>
 	<link rel="stylesheet" href="resource/shared/main.css">
 	<link rel="stylesheet" href="resource/index/index.css">
 	<link rel="stylesheet" href="resource/shared/sidenav.css">
-	
+	<title>Noah Severyn | About Me</title>
 </head>
+
 <body>
-	<!--Side Navigation-->
-	<div class="sidenav">
+	<nav class="sidenav">
 		<p id="sidenavHeader">NOAH <br /> SEVERYN</p>
 		<a href="index.html">Home</a>
 		<a href="simcity4.html">Simcity 4 Modding: A Passion</a>
 		<a href="polynomial-regression-for-powerbi.html">Polynomial Regression for Power BI</a>
-	</div>
+	</nav>
 
-	<div id="header_bg">
+	<header>
 		<div id="header_title">
 			<h1>·  Welcome  ·</h1>
 		</div>
 		<div id="header_social">
 			<!--https://www.freepik.com-->
 			<a href="https://www.linkedin.com/in/noah-severyn-660055110/" target="_blank">
-				<img src="https://cdn-icons-png.flaticon.com/512/169/169092.png" class="socialicon" alt="Linkedin logo linked to my Linkedin profile" />
+				<img src="https://cdn-icons-png.flaticon.com/512/169/169092.png" class="socialicon" alt="Linkedin logo linked to my Linkedin profile" title="Linkedin"/>
 			</a>
 			<a href="https://github.com/noah-severyn" target="_blank">
-				<img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" class="socialicon" alt="Github logo linked to my github site" />
+				<img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" class="socialicon" alt="Github logo linked to my github site" title="GitHub"/>
 			</a>
 		</div>
-	</div>
+	</header>
 	
-	<p>Hi. I am a work in progress.</p>
+	<section id="Intro">
+		<p>Hi. I am a work in progress.</p>
+	</section>
+	
 </body>
 </html>
