--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<nav class="sidenav">
 		<p id="sidenavHeader">NOAH <br /> SEVERYN</p>
 		<a href="index.html">Home</a>
-		<a href="simcity4.html">Simcity 4 Modding: A Passion</a>
 		<a href="polynomial-regression-for-powerbi.html">Polynomial Regression for Power BI</a>
+		<a href="simcity4.html">Simcity 4 Modding: A Passion</a>
 	</nav>
 
 	<header>
 		<div id="header_title">
-			<h1>·  Welcome  ·</h1>
+			<h1 class="centered">·  Welcome  ·</h1>
 		</div>
 		<div id="header_social">
 			<!--https://www.freepik.com-->
@@ -29,11 +29,14 @@
 			<a href="https://github.com/noah-severyn" target="_blank">
 				<img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" class="socialicon" alt="Github logo linked to my github site" title="GitHub"/>
 			</a>
+			<a href="https://community.simtropolis.com/profile/455740-nos17/" target="_blank">
+				<img src="https://cdn-icons-png.flaticon.com/512/24/24914.png" class="socialicon" alt="Link to Simtropolis Profile" title="GitHub"/>
+			</a>
 		</div>
 	</header>
 	
 	<section id="Intro">
-		<p>Hi. I am a work in progress.</p>
+		<p>Hi. This is a site to mainly show off the things I am working on and enjoy doing. Have a look around.</p>
 	</section>
 	
 </body>
